# gonhanh.org

./: .env.example  .gitignore  CONTRIBUTORS.md  README.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: notarize-complete.yml  release.yml  update-contributors.yml
core/examples/: trace_foreign.rs  trace_wng.rs  trace_wng_detail.rs
core/src/: lib.rs  utils.rs
core/tests/: auto_restore_dynamic_test.rs  behavior_test.rs  bug_reports_test.rs  common_issues_test.rs  dynamic_test.rs  (+13 more)
docs/: install-linux.md  install-macos.md  install-windows.md  vietnamese-language-system.md
projects/easy-ai-platform/personalization-engine/: .env.example  Cargo.toml  Makefile  README.md  docker-compose.yml
projects/easy-ai-platform/personalization-engine/config/: default.toml
projects/easy-ai-platform/personalization-engine/docs/: pdr-personalization-engine.md
projects/easy-ai-platform/personalization-engine/scripts/: init-mysql.sql
projects/easy-ai-platform/personalization-engine/src/: config.rs  lib.rs  main.rs
projects/easy-ai-platform/personalization-engine/src/api/: admin.rs  mod.rs  personalize.rs  webhooks.rs
projects/easy-ai-platform/personalization-engine/src/connectors/: clickhouse_client.rs  gorse_client.rs  mod.rs  mysql_client.rs  redis_client.rs
projects/easy-ai-platform/personalization-engine/src/engine/: content_rules.rs  lead_scoring.rs  mod.rs  orchestrator.rs
projects/easy-ai-platform/personalization-engine/src/models/: content.rs  lead.rs  mod.rs  recommendation.rs
scripts/: build-macos.sh  generate-release-notes.sh  install-linux.sh
(+13 files in other folders)
