[package]
name = "personalization-engine"
version = "0.1.0"
edition = "2021"
description = "AI-powered personalization engine for Easy AI Platform"
authors = ["Easy AI Team"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }
clickhouse = { version = "0.12", features = ["lz4"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client (for Gorse API)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
